--- a/fighting.html
+++ b/fighting.html
@@ -7,12 +7,13 @@
   :root{--bg:#000;--fg:#fff;}
   html,body{margin:0;padding:0;height:100%;background:var(--bg);color:var(--fg);font-family:Arial,Helvetica,sans-serif;display:flex;justify-content:center;align-items:center;overflow:hidden;}
   canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
-  .menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:12px;background:rgba(0,0,0,0.85);}
+  .menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:10px;background:rgba(0,0,0,0.85);}
   .menu button{padding:10px 20px;font-size:18px;border-radius:6px;border:1px solid #fff;background:transparent;color:#fff;cursor:pointer;}
-  .menu .points{margin-top:10px;font-size:16px;}
-  #skinSelect{margin-top:10px;padding:5px;font-size:16px;border-radius:6px;border:1px solid #fff;background:#000;color:#fff;}
+  .menu .points{font-size:16px;}
+  #skinSelect{padding:5px;font-size:16px;border-radius:6px;border:1px solid #fff;background:#000;color:#fff;}
   #caseAnimation{position:absolute;top:0;left:0;width:100%;height:100%;display:none;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);}
   #caseCanvas{background:#111;border:2px solid #fff;border-radius:6px;}
+  #winMessage{margin-top:10px;font-size:16px;font-weight:bold;}
 </style>
 </head>
 <body>
@@ -22,8 +23,9 @@
   <button id="startBtn">Start Game</button>
   <button id="casesBtn">Open Case (5 points)</button>
   <div class="points" id="pointsDisplay">Points: 0</div>
-  <label for="skinSelect" class="points">Select Skin:</label>
+  <label class="points">Select Skin:</label>
   <select id="skinSelect"></select>
+  <div id="winMessage"></div>
 </div>
 
 <div id="caseAnimation">
@@ -39,6 +41,7 @@ const startBtn=document.getElementById('startBtn');
 const casesBtn=document.getElementById('casesBtn');
 const pointsDisplay=document.getElementById('pointsDisplay');
 const skinSelect=document.getElementById('skinSelect');
+const winMessage=document.getElementById('winMessage');
 const caseOverlay=document.getElementById('caseAnimation');
 const caseCanvas=document.getElementById('caseCanvas');
 const caseCtx=caseCanvas.getContext('2d');
@@ -53,60 +56,44 @@ let obstacles=[], invincible=false, invTimer=0;
 let currentSkin='white';
 let ownedSkins=['white'];
 
-// Skins by rarity
-const rarities = {
-  Common: ['red','green','blue','yellow','cyan','magenta'],
-  Rare: ['orange','purple','lime','pink'],
-  Epic: ['gold','silver'],
-  Legendary: ['rainbow']
-};
-
-// Rarity colors for UI (optional)
-const rarityColors = {
-  Common:'#aaa',
-  Rare:'#4fa3ff',
-  Epic:'#b347ff',
-  Legendary:'#ffcc00'
-};
-
-// Utility pick function
-function pick(arr){ return arr[Math.floor(Math.random()*arr.length)]; }
-
-// Roll skin by rarity
-function rollSkin(){
-  const roll = Math.random();
-  if(roll<0.6) return {rarity:"Common", skin:pick(rarities.Common)};
-  if(roll<0.9) return {rarity:"Rare", skin:pick(rarities.Rare)};
-  if(roll<0.99) return {rarity:"Epic", skin:pick(rarities.Epic)};
-  return {rarity:"Legendary", skin:pick(rarities.Legendary)};
-}
+const colors=['red','green','blue','yellow','cyan','magenta'];
+const rareColors=['orange','purple','lime','pink','gold'];
 
 function randPos(){ return {x:Math.floor(Math.random()*COLS),y:Math.floor(Math.random()*ROWS)}; }
+
 function placeFood(){
-  let p; do { p=randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
-  food={...p,color:pick(rarities.Common),moving:Math.random()<0.2,dir:Math.random()<0.5?1:-1};
+  let p;
+  do { p=randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
+  food={...p,color:colors[Math.floor(Math.random()*colors.length)],moving:Math.random()<0.2,dir:Math.random()<0.5?1:-1};
 }
+
 function placeObstacles(count=5){
   obstacles=[];
   for(let i=0;i<count;i++){
-    let p; do{p=randPos();}while(snake.some(s=>s.x===p.x && s.y===p.y)||obstacles.some(o=>o.x===p.x&&o.y===p.y));
+    let p;
+    do{p=randPos();}while(snake.some(s=>s.x===p.x && s.y===p.y)||obstacles.some(o=>o.x===p.x&&o.y===p.y));
     obstacles.push(p);
   }
 }
 
 function startGame(){
   snake=[{x:10,y:10,color:currentSkin},{x:9,y:10,color:'#555'},{x:8,y:10,color:'#333'}];
-  dir={x:1,y:0}; nextDir=dir; score=0; invincible=false; invTimer=0;
+  dir={x:1,y:0}; nextDir=dir;
+  score=0; invincible=false; invTimer=0;
   obstacles=[]; placeObstacles(); placeFood();
-  running=true; if(timer) clearInterval(timer);
+  running=true;
+  if(timer) clearInterval(timer);
   timer=setInterval(tick,MOVE_INTERVAL);
   draw();
   menu.style.display='none';
+  winMessage.textContent='';
 }
 
 function gameOver(){
-  running=false; if(timer){ clearInterval(timer); timer=null; }
-  ctx.fillStyle='rgba(255,255,255,0.1)'; ctx.fillRect(0,0,canvas.width,canvas.height);
+  running=false;
+  if(timer){ clearInterval(timer); timer=null; }
+  ctx.fillStyle='rgba(255,255,255,0.1)';
+  ctx.fillRect(0,0,canvas.width,canvas.height);
   menu.style.display='flex';
 }
 
@@ -114,7 +101,7 @@ function tick(){
   if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
   const head={x:snake[0].x+dir.x,y:snake[0].y+dir.y,color:snake[0].color};
 
-  if(head.x<0||head.x>=COLS||head.y<0||head.y>=ROWS){ gameOver(); return; }
+  if(head.x < 0 || head.x >= COLS || head.y < 0 || head.y >= ROWS){ gameOver(); return; }
   if(snake.some(s=>s.x===head.x && s.y===head.y) && !invincible){ gameOver(); return; }
   if(obstacles.some(o=>o.x===head.x && o.y===head.y) && !invincible){ gameOver(); return; }
 
@@ -122,9 +109,9 @@ function tick(){
   if(food.moving){ food.x+=food.dir; if(food.x<0||food.x>=COLS) food.dir*=-1; }
 
   if(head.x===food.x && head.y===food.y){
-    points+=10;
-    if(head.color===food.color){ score+=10; snake[0].color=food.color; }
-    else{ score=Math.max(0,score-5); points=Math.max(0,points-5); snake.pop(); }
+    points += 10;
+    if(head.color===food.color){ score += 10; snake[0].color = food.color; }
+    else{ score = Math.max(0,score-5); points = Math.max(0,points-5); snake.pop(); }
     if(Math.random()<0.1){ invincible=true; invTimer=50; }
     placeFood(); updatePoints();
   } else snake.pop();
@@ -135,13 +122,15 @@ function tick(){
 function draw(){
   ctx.fillStyle='#000'; ctx.fillRect(0,0,canvas.width,canvas.height);
   ctx.fillStyle='#555'; obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
-  ctx.fillStyle=invincible?'gold':food.color; ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
+  ctx.fillStyle=invincible?'gold':food.color;
+  ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
   for(let i=0;i<snake.length;i++){
     const s=snake[i];
     ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;
     ctx.fillRect(s.x*CELL+1,s.y*CELL+1,CELL-2,CELL-2);
   }
-  ctx.fillStyle='white'; ctx.font='16px Arial';
+  ctx.fillStyle='white';
+  ctx.font='16px Arial';
   ctx.fillText('Points: '+points,10,20);
 }
 
@@ -161,45 +150,30 @@ function updateSkinSelect(){
   });
 }
 
-// Change skin immediately on selection
 skinSelect.addEventListener('change',(e)=>{
   currentSkin=e.target.value;
   draw();
 });
 
-window.addEventListener('keydown',(e)=>{
-  if(!running) return;
-  if(['ArrowUp','w','W'].includes(e.key)) nextDir={x:0,y:-1};
-  if(['ArrowDown','s','S'].includes(e.key)) nextDir={x:0,y:1};
-  if(['ArrowLeft','a','A'].includes(e.key)) nextDir={x:-1,y:0};
-  if(['ArrowRight','d','D'].includes(e.key)) nextDir={x:1,y:0};
-});
-
-canvas.addEventListener('click',()=>{ canvas.focus(); });
-
 startBtn.addEventListener('click',()=>{ startGame(); });
 
 casesBtn.addEventListener('click',()=>{
-  if(points<5){ alert("Not enough points! Each case costs 5."); return; }
+  if(points<5){ winMessage.textContent='Not enough points!'; winMessage.style.color='white'; return; }
   points-=5; updatePoints();
 
-  const result = rollSkin();
-  const finalSkin = result.skin;
-  const rarity = result.rarity;
+  // Decide skin
+  const roll=Math.random();
+  let finalSkin, rarity;
+  if(roll<0.6){ finalSkin=colors[Math.floor(Math.random()*colors.length)]; rarity='Common'; }
+  else if(roll<0.95){ finalSkin=rareColors[Math.floor(Math.random()*rareColors.length)]; rarity='Rare'; }
+  else{ finalSkin='gold'; rarity='Legendary'; }
+
   ownedSkins.push(finalSkin);
 
   // Case animation
   caseOverlay.style.display='flex';
-  const scrollSkins = [...rarities.Common,...rarities.Rare,...rarities.Epic,...rarities.Legendary];
+  const scrollSkins=[...colors,...rareColors,'gold','red','green','blue','yellow'];
   let offset=0, speed=20, frames=0;
-
-  function createRainbow(ctx){
-    const grad = ctx.createLinearGradient(0,0,70,0);
-    grad.addColorStop(0,'red'); grad.addColorStop(0.2,'orange');
-    grad.addColorStop(0.4,'yellow'); grad.addColorStop(0.6,'green');
-    grad.addColorStop(0.8,'blue'); grad.addColorStop(1,'violet');
-    return grad;
-  }
 
   function animateCase(){
     frames++;
@@ -207,8 +181,8 @@ casesBtn.addEventListener('click',()=>{
     caseCtx.fillRect(0,0,caseCanvas.width,caseCanvas.height);
 
     for(let i=0;i<scrollSkins.length;i++){
-      const x=(i*80-offset+caseCanvas.width/2) % (scrollSkins.length*80) - 80;
-      caseCtx.fillStyle=scrollSkins[i]==='rainbow' ? createRainbow(caseCtx) : scrollSkins[i];
+      const x=(i*80-offset+caseCanvas.width/2)% (scrollSkins.length*80) - 80;
+      caseCtx.fillStyle=scrollSkins[i];
       caseCtx.fillRect(x,20,70,60);
     }
 
@@ -218,7 +192,10 @@ casesBtn.addEventListener('click',()=>{
       caseOverlay.style.display='none';
       currentSkin=finalSkin;
       updatePoints();
-      alert(`You got a ${rarity} skin: ${finalSkin}!`);
+
+      winMessage.textContent = `You got a ${rarity} skin: ${finalSkin}!`;
+      winMessage.style.color = finalSkin;
+
       return;
     }
     requestAnimationFrame(animateCase);
@@ -227,6 +204,18 @@ casesBtn.addEventListener('click',()=>{
 });
 
 updatePoints();
+
+window.addEventListener('keydown',(e)=>{
+  const k=e.key;
+  if(!running) return;
+  if(k==='ArrowUp'||k==='w'||k==='W') nextDir={x:0,y:-1};
+  else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
+  else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
+  else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
+});
+
+canvas.addEventListener('click',()=>{ canvas.focus(); });
+
 })();
 </script>
 </body>
